[gd_scene load_steps=7 format=3 uid="uid://br01iufnrkpss"]

[ext_resource type="Script" path="res://battlescape/Battlescape.gd" id="1_v5pns"]
[ext_resource type="PackedScene" path="res://battlescape/UI/PlayerPanel.tscn" id="2_uqp2m"]
[ext_resource type="PackedScene" uid="uid://dxoxygg0vlkkg" path="res://battlescape/UI/MissionPanel.tscn" id="3_q74yj"]
[ext_resource type="Script" path="res://battlescape/MissionLogic.gd" id="4_w17r6"]
[ext_resource type="Script" path="res://battlescape/CombatEngine.gd" id="5_ynvgg"]
[ext_resource type="Script" path="res://battlescape/MissionGenerator.gd" id="6_crbri"]

[node name="Battlescape" type="Node"]
script = ExtResource("1_v5pns")

[node name="PlayerPanel" parent="." instance=ExtResource("2_uqp2m")]

[node name="MissionPanel" parent="." instance=ExtResource("3_q74yj")]
visible = false
offset_left = 750.0
offset_right = 1150.0
offset_bottom = 650.0

[node name="HUDPanel" type="Panel" parent="."]
offset_left = 388.0
offset_top = 460.0
offset_right = 705.0
offset_bottom = 623.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUDPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EngageButton" type="Button" parent="HUDPanel/VBoxContainer"]
layout_mode = 2
offset_right = 317.0
offset_bottom = 79.0
size_flags_vertical = 3
text = "ENGAGE"

[node name="EndTurnButton" type="Button" parent="HUDPanel/VBoxContainer"]
layout_mode = 2
offset_top = 83.0
offset_right = 317.0
offset_bottom = 163.0
size_flags_vertical = 3
text = "END TURN"

[node name="MissionArea" type="Node2D" parent="."]

[node name="MissionLogic" type="Node" parent="."]
script = ExtResource("4_w17r6")

[node name="CombatEngine" type="Node" parent="MissionLogic"]
script = ExtResource("5_ynvgg")

[node name="Tools" type="Node" parent="."]

[node name="MissionGenerator" type="Node" parent="Tools"]
script = ExtResource("6_crbri")
